--- a/sample/src/main/res/layout/content_eddy_tooth_beacon.xml
+++ b/sample/src/main/res/layout/content_eddy_tooth_beacon.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="house.heka.eddytooth.example.EddyToothBeacon"
+    tools:context="house.heka.eddytooth.highly.Contiguous"
     tools:showIn="@layout/activity_eddy_tooth_beacon">
     <TextView
         android:id="@+id/advertising_desc"
@@ -27,4 +27,10 @@
         android:textStyle="bold"
         android:textAllCaps="true"
         android:text="@string/off"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/discovery_results"
+        android:layout_marginTop="64dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 </RelativeLayout>
